# smashdog_danmu

./: README.md  desktop.html  gift.html  in.html  index.html  msg.html  package-lock.json  package.json  vite.config.js
src/: desktop.js  desktop.vue  gift.js  gift.vue  in.js  in.vue  index.js  index.vue  msg.js  msg.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/assets/: subwindow.less
src/components/: msg.vue
src/libs/: bilibili.js  const.ts  huya.js  imghandle.js  webset.js
src/libs/douyu/: client.js  messageEvent.js  packet.js  stt.js
